@@ -1,3 +1,8 @@
+2019-08-01 Magnus Hagdorn
+ * piccolo3/common/__init__.py: load new module
+ * piccolo3/common/PiccoloScheduler.py: add enum for recording status of
+   scheduled jobs
+
 2019-05-11 Magnus Hagdorn
  * piccolo3/common/PiccoloSpectra.py: use new method to compute wavelengths
 
